panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_cv_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_cv_qualifiers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_cv_qualifiers.c"
   (tentative-definition (a~0 `int volatile` (static a)) ∅)
   (tentative-definition (b~1 `int const volatile` (static b)) ∅)
   (tentative-definition (c~2 `int const volatile` (static c)) ∅))

----- stderr -----
