panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_error_diagnostics_from_multiple_steps_are_sorted.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: expected `;` after declaration (or did you mean to declare a function: `f()`?)
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:1:5]
   │
 1 │ int f {}
   │     ┬  
   │     ╰── in this declaration
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:3:1]
   │
 3 │ const type_missing;
   │ ──┬──  
   │   ╰──── type missing
───╯
