panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_function_definition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_function_definition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_function_definition.c"
   (function-definition external stack-size=24
      (a~0 `fn() -> int` (static a))
      (compound-statement
         (return (42 `int` @0))))
   (function-definition external stack-size=24
      (b~2 `fn(∅: int) -> int` (static b))
      (params
         (b.unnamed_parameter.0~4 `int` @0))
      (compound-statement
         (return (42 `int` @4))))
   (function-definition external stack-size=24
      (c~5 `fn(a: int) -> int` (static c))
      (params
         (a~7 `int` @0))
      (compound-statement
         (return (a~7 `int` @0))))
   (function-definition external stack-size=24
      (d~8 `fn(a: int) -> int` (static d))
      (params
         (a~10 `int` @0))
      (compound-statement
         (compound-statement
            (return (a~10 `int` @0)))))
   (function-definition external stack-size=24
      (e~11 `fn() -> int` (static e))
      (compound-statement
         (compound-statement)
         (expression ∅)
         (return (42 `int` @0))))
   (function-definition external stack-size=24
      (f~13 `fn() -> int` (static f))
      (compound-statement
         (definition (a~15 `int` @0) (42 `int` @0))
         (expression (a~15 `int` @0))
         (return (a~15 `int` @0))))
   (function-definition external stack-size=24
      (g~16 `fn() -> char` (static g))
      (compound-statement
         (definition (c~18 `char` @0) (truncate `char` @0 (0 `int` @4)))
         (return (c~18 `char` @0))))
   (function-definition external stack-size=24
      (h~19 `fn() -> int` (static h))
      (compound-statement
         (definition (a~21 `int` @0) (42 `int` @0))
         (compound-statement
            (definition (a~22 `int` @4) (27 `int` @4))
            (return (a~22 `int` @4)))))
   (function-definition external stack-size=24
      (i~23 `fn(a: int) -> int` (static i))
      (params
         (a~25 `int` @0))
      (compound-statement
         (compound-statement
            (definition (a~26 `int` @4) (42 `int` @4)))
         (return (a~25 `int` @0))))
   (function-definition external stack-size=24
      (j~27 `fn() -> int` (static j))
      (compound-statement
         (definition (a~29 `int` @0) (42 `int` @0))
         (compound-statement
            (definition (a~30 `int` @4) (27 `int` @4))
            (expression (a~30 `int` @4)))
         (return (a~29 `int` @0)))))

----- stderr -----
